# gpr-300-fa2024-Quinn-McDonnell

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag  lit.vert
assignments/assignment1/: CMakeLists.txt  main.cpp
assignments/assignment1/assets/: box.frag  edge.frag  inverted.frag
assignments/assignment2/: CMakeLists.txt  main.cpp
assignments/assignment2/assets/: box.frag  debug.frag  debug.vert  edge.vert  grayscale.frag  lit.frag  lit.vert  model.frag  model.vert  post.frag  shadow.vert
assignments/assignment3/: main.cpp
assignments/assignment3/assets/: deferredLit.frag  deferredLit.vert  geometryPass.frag  orb.frag  orb.vert
assignments/assignmentws/: CMakeLists.txt  main.cpp
assignments/assignmentws/assets/: water.frag  water.vert
assignments/assignmentws1/: CMakeLists.txt  main.cpp
assignments/assignmentws1/assets/: lit.vert  pbr.frag  pbr.vert
assignments/assignmentws2/: CMakeLists.txt  main.cpp
assignments/assignmentws2/assets/: island.frag
assignments/assignmentws3/: CMakeLists.txt  main.cpp
assignments/assignmentws3/assets/: island.vert  transition.frag  transition.vert
assignments/myengine/: CMakeLists.txt
assignments/myengine/engine/: CMakeLists.txt  main.cpp
assignments/myengine/libs/: CMakeLists.txt
