file(
 GLOB_RECURSE ASSIGNMENTWS1_INC CONFIGURE_DEPENDS
 RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
 *.h *.hpp
)

file(
 GLOB_RECURSE ASSIGNMENTWS1_SRC CONFIGURE_DEPENDS
 RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
 *.c *.cpp
)
#Copies this assignmentws1's asset folder to bin when it is built
add_custom_target(copyAssetsAWS1 ALL COMMAND ${CMAKE_COMMAND} -E copy_directory
${CMAKE_CURRENT_SOURCE_DIR}/assets/
${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assets/)

install(FILES ${ASSIGNMENTWS1_INC} DESTINATION include/assignmentws1)
add_executable(assignmentws1 ${ASSIGNMENTWS1_SRC} ${ASSIGNMENTWS1_INC})
target_link_libraries(assignmentws1 PUBLIC core IMGUI assimp)
target_include_directories(assignmentws1 PUBLIC ${CORE_INC_DIR} ${stb_INCLUDE_DIR})

#Trigger asset copy when assignmentws1 is built
add_dependencies(assignmentws1 copyAssetsAWS1)